2001-07-05  Christian Rose  <menthos@menthos.com>

	* xbill.desktop: Modified Swedish entries.

2001-05-26  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* x11-gtk.cc (CreateDialog): Plug memory leak.

2001-05-23  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* Game.h, Game.cc: Change some unsigned int to int to fix bug
	  #24536.
	  (Game::{start, warp_to_level, update} ): Ensure we don't pass
	   G_MAXINT later, fix bug #17697.

	* x11-gtk.cc: Connect dialogs to close signal instead of
	  delete_event. Fixes bug #53454.
	

2000-05-12  Andreas Hyden  <a.hyden@cyberpoint.se>

	* xbill.desktop: Added Swedish translation.

2000-05-06  Karl Eichwalder  <ke@suse.de>

	* xbill.desktop: Add de.

2000-04-30  James Henstridge  <james@daa.com.au>

	* MCursor.cc: fix problem with initialisation of static variable.

	* pixmaps/Makfile.am, cursors/Makefile.am: you need to edit the
	Makefile.am's rather than .in's if you want your additions to work.

2000-04-30  James Cape  <jcape@jcinteractive.com>

	* pixmaps/*.xpm: Updated all remaining pixmaps to look better.
	* pixmaps: Added debian.xpm, beos.xpm, turbolinux.xpm, suse.xpm, and
	  caldera.xpm

	* cursors/*.xpm: Updated all cursors to match pixmaps.
	* cursors: Added debian.xpm, beos.xpm, turbolinux.xpm, suse.xpm, and
	  caldera.xpm.

	* Library.cc, Library.h: Added new pixmaps so they are used by
	  the game.

	* pixmaps/Makefile.in, cursors/Makefile.in: Added in new pixmaps and
	  cursors so they are installed.

1999-09-19  James Cape  <jcape@jcinteractive.com>

	* Added cursors for Apple, BSD, Sun, SGI, Linux, and RedHat to match
	  the new pixmaps.

	* Changed pixmaps for Apple, BSD, Sun, SGI, Linux, and RedHat from
	  24-bit images to 5-bit images (32 colors/image).

1999-09-18  James Cape  <jcape@jcinteractive.com>

	* Changed pixmaps for Apple, BSD, Sun, SGI, and Linux to better
	  looking ones.

1999-08-09  Robert Brady  <rwb197@ecs.soton.ac.uk>

	* Cable.h: removed implicit int.
