@@ -1,3 +1,9 @@
+2001-07-08  Juan Pablo Mendoza <pablo_juan@yahoo.com>
+
+	Patch from John Ericson <john@john.pp.se>
+
+	* UI.cc (UI::make_mainwin): Hardcode background color to white.
+
 2001-07-05  Christian Rose  <menthos@menthos.com>
 
 	* xbill.desktop: Modified Swedish entries.
